# dss-ecal

./: .gitignore  CMakeLists.txt  README.md  ecal.cc
config/: setup.sh
include/: Config.hh  DetectorConstruction.hh  EventAction.hh  HistoManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh
src/: Config.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc
